deps/v8/test/message/fail/func-name-inferrer-arg-1.js
// Copyright 2017 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

(function (param = function() { throw new Error('boom') }) {
  (() => {
    param();
  })();

})();
